--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -164,7 +164,10 @@ screen.WORLD_OUTLINE_SETTINGS=World Outline
 screen.WORLD_OUTLINE_SETTINGS.comment=Settings that are about optional outline effects.
 
 screen.VX_SETTINGS=Rethinking Voxels Settings
+screen.VX_SETTINGS.comment=Settings that are introduced by Rethinking Voxels
 screen.DENOISE_SETTINGS=Denoiser-Related Settings
+
+screen.VX_WORLD=Other Effects
 #Settings
 option.RP_MODE=RP Support
 option.RP_MODE.comment=Changes many internal calculations to determine how different blocks and materials will be rendered. §bIntegrated PBR+§r: Calculated PBR and extra effects, highly recommended for most use cases. §aBasic§r: No PBR or extra effects. §elabPBR/seuspbr§r: Materials using the required PBR resource packs.
@@ -917,7 +920,13 @@ value.DENOISING_DEFINE.2=On
 
 option.ACCUMULATION=Accumulation
 option.ACCUMULATION.comment=If enabled, block light data will be smoothed across multiple frames. Without this, lighting will look flickery and low-resolution.
-option.TRACE_ALL_LIGHTS=Trace to all lights
+option.TRACE_ALL_LIGHTS=Trace to All Lights
 option.TRACE_ALL_LIGHTS.comment=If enabled, block light calculation will happen for all light sources in every frame, rather than only happening for a randomly selected one. [§c-§r] High performance impact.
 
 option.BLOCKLIGHT_I=Blocklight Brightness
+
+option.CONWAY=End Game of Life
+option.CONWAY.comment=Simulates Conway's game of life at the bottom of the end. Cells that are close to the player revive.
+value.CONWAY.0=Off
+value.CONWAY.1=Grayscale
+value.CONWAY.2=End-Colors
