profiles affect RV settings

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -8,7 +8,7 @@ profile.MEDIUM=§aMedium
 profile.HIGH=§bHigh (Default)
 profile.VERYHIGH=§9Very High
 profile.ULTRA=§dUltra
-profile.comment=Shader profiles change performance settings with the most optimised visual fidelity to performance ratio. §e[*]§r It's recommended to use one of these profiles for your settings unless you know what you are doing. §e[*]§r All affected settings can all be found in the "Performance Settings" menu.
+profile.comment=Shader profiles change performance settings with the most optimised visual fidelity to performance ratio. §e[*]§r It's recommended to use one of these profiles for your settings unless you know what you are doing. §e[*]§r All affected settings can all be found in the "Performance Settings" or the "Rethinking Voxels Settings" menu.
 
 #Information
 screen.INFORMATION=Information
