light colour options

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -136,8 +136,8 @@ screen.RAIN_LIGHT_MULTS=Rainy/Snowy Weather
 screen.NETHER_LIGHT_MULTS=The Nether Dimension
 screen.END_LIGHT_MULTS=The End Dimension
 
-screen.BLOCKLIGHT_COLOR_SETTINGS=Blocklight Color
-screen.BLOCKLIGHT_COLOR_SETTINGS.comment=Settings to adjust the color emited from light source blocks.
+screen.BLOCKLIGHT_SETTINGS=Blocklight Color
+screen.BLOCKLIGHT_SETTINGS.comment=Settings to adjust the color emitted from light source blocks.
 
 screen.MOON_PHASE_INF_SETTINGS=Moon Phase Influence
 screen.MOON_PHASE_INF_SETTINGS.comment=Settings to determine how different moon phases affect the night lighting.
@@ -926,8 +926,6 @@ option.ACCUMULATION.comment=If enabled, block light data will be smoothed across
 option.TRACE_ALL_LIGHTS=Trace to All Lights
 option.TRACE_ALL_LIGHTS.comment=If enabled, block light calculation will happen for all light sources in every frame, rather than only happening for a randomly selected one. [§c-§r] High performance impact.
 
-option.BLOCKLIGHT_I=Blocklight Brightness
-
 option.LIGHT_COLOR_SATURATION=Light Color Saturation
 
 option.CONWAY=End Game of Life
@@ -954,3 +952,279 @@ option.GI_STRENGTH=Global Illumination
 value.GI_STRENGTH.0=Off
 value.GI_STRENGTH.1=Correct
 value.GI_STRENGTH.2=Intense
+
+
+option.CAULDRON_BRIGHTNESS_LAVA=Lava Cauldron Brightness
+option.BRIGHTNESS_LAVA=Lava Brightness
+option.BRIGHTNESS_FIRE=Fire Brightness
+option.CAMPFIRE_BRIGHTNESS_FIRE=Campfire Brightness
+option.BRIGHTNESS_SOULFIRE=Soul Fire Brightness
+option.CAMPFIRE_BRIGHTNESS_SOULFIRE=Soul Campfire Brightness
+option.ORE_BRIGHTNESS_IRON=Iron Ore Brightness
+option.ORE_BRIGHTNESS_COPPER=Copper Ore Brightness
+option.ORE_BRIGHTNESS_GOLD=Gold Ore Brightness
+option.ORE_BRIGHTNESS_DIAMOND=Diamond Ore Brightness
+option.ORE_BRIGHTNESS_EMERALD=Emerald Ore Brightness
+option.BLOCK_BRIGHTNESS_EMERALD=Emerald Block Brightness
+option.ORE_BRIGHTNESS_LAPIS=Lapis Ore Brightness
+option.BLOCK_BRIGHTNESS_LAPIS=Lapis Block Brightness
+option.OREUNLIT_BRIGHTNESS_REDSTONE=Ore Brightness (Unlit)
+option.ORELIT_BRIGHTNESS_REDSTONE=Ore Brightness (Lit)
+option.BLOCK_BRIGHTNESS_REDSTONE=Block Brightness
+option.WIRE0_BRIGHTNESS_REDSTONE=Dust Brightness (Power 1-5)
+option.WIRE1_BRIGHTNESS_REDSTONE=Dust Brightness (Power 6-10)
+option.WIRE2_BRIGHTNESS_REDSTONE=Dust Brightness (Power 11-14)
+option.WIRE3_BRIGHTNESS_REDSTONE=Dust Brightness (Power 15)
+option.TORCH_BRIGHTNESS_REDSTONE=Torch Brightness
+option.BRIGHTNESS_AMETHYST=Amethyst Cluster Brightness
+option.BRIGHTNESS_ICE=Blue Ice Brightness
+option.BRIGHTNESS_PUMPKIN=Jack o'Lantern Brightness
+option.LOW_BRIGHTNESS_PICKLE=Sea Pickle Brightness (1-2 Pickles)
+option.HIGH_BRIGHTNESS_PICKLE=Sea Pickle Brightness (3-4 Pickles)
+option.BRIGHTNESS_GLOWSTONE=Glowstone Brightness
+option.BRIGHTNESS_SEALANTERN=Sea Lantern Brightness
+option.BLOCK_BRIGHTNESS_MAGMA=Magma Block Brightness
+option.CUBE_BRIGHTNESS_MAGMA=Magma Cube Brightness
+option.BRIGHTNESS_CRYING=Crying Obsidian Brightness
+option.BRIGHTNESS_TORCH=Torch Brightness
+option.LANTERN_BRIGHTNESS_TORCH=Lantern Brightness
+option.BRIGHTNESS_ENDROD=End Rod Brightness
+option.BRIGHTNESS_CHORUS=Chorus Flower Brightness
+option.BRIGHTNESS_FURNACE=Furnace Brightness
+option.BRIGHTNESS_SOULTORCH=Soul Torch Brightness
+option.LANTERN_BRIGHTNESS_SOULTORCH=Soul Lantern Brightness
+option.BRIGHTNESS_LICHEN=Glow Lichen Brightness
+option.BRIGHTNESS_TABLE=Enchanting Table Brightness
+option.FRAME_BRIGHTNESS_END=End Portal Frame Brightness (With Eye)
+option.PORTAL_BRIGHTNESS_END=End Portal Brightness
+option.CHEST_BRIGHTNESS_END=Ender Chest Brightness
+option.BRIGHTNESS_DRAGON=Dragon Egg brightness
+option.BRIGHTNESS_CANDLE=Candle Brightness
+option.CAKE_BRIGHTNESS_CANDLE=Birthday Cake Brightness
+option.ANCHOR_BRIGHTNESS_PORTAL=Respawn Anchor Brightness
+option.BRIGHTNESS_PORTAL=Nether Portal Brightness
+option.BRIGHTNESS_BERRY=Glow Berry Brightness
+option.BRIGHTNESS_REDSTONELAMP=Redstone Lamp Brightness
+option.BRIGHTNESS_SHROOMLIGHT=Shroomlight Brightness
+option.BRIGHTNESS_YELLOWFROG=Ochre Froglight Brightness
+option.BRIGHTNESS_GREENFROG=Verdant Froglight Brightness
+option.BRIGHTNESS_PINKFROG=Pearlescent Froglight Brightness
+option.SENSOR_BRIGHTNESS_SCULK=Sculk Sensor Brightness
+option.BRIGHTNESS_SPAWNER=Spawner Brightness
+option.BRIGHTNESS_BREWINGSTAND=Brewing Stand Brighness
+option.BRIGHTNESS_BEACON=Beacon Brightness
+option.BRIGHTNESS_CONDUIT=Conduit Brightness
+option.BRIGHTNESS_ENDCRYSTAL=End Crystal Brightness
+option.BRIGHTNESS_LIGHTNING=Lightning Bolt Brightness
+option.BRIGHTNESS_ITEMFRAME=Glow Itemframe Brightness
+option.BRIGHTNESS_BLAZE=Blaze Brightness
+option.BRIGHTNESS_SQUID=Glow Squid Brightness
+option.BRIGHTNESS_ALLAY=Allay Brightness
+option.BRIGHTNESS_TNT=TNT Brightness
+option.BRIGHTNESS_CRIMSON=Crimson Stem / Hyphae Brightness
+option.BRIGHTNESS_WARPED=Warped Stem / Hyphae Brightness
+
+option.CAULDRON_HARDCODED_LAVA_COL=Override Lava Cauldron Color
+option.HARDCODED_LAVA_COL=Override Lava Color
+option.HARDCODED_FIRE_COL=Override Fire Color
+option.CAMPFIRE_HARDCODED_FIRE_COL=Override Campfire Color
+option.CAMPFIRE_HARDCODED_SOULFIRE_COL=Override Soul Campfire Color
+option.HARDCODED_SOULFIRE_COL=Override Soul Fire Color
+option.ORE_HARDCODED_IRON_COL=Override Iron Ore Color
+option.ORE_HARDCODED_COPPER_COL=Override Copper Ore Color
+option.ORE_HARDCODED_GOLD_COL=Override Gold Ore Color
+option.ORE_HARDCODED_DIAMOND_COL=Override Diamond Ore Color
+option.ORE_HARDCODED_EMERALD_COL=Override Emerald Ore Color
+option.BLOCK_HARDCODED_EMERALD_COL=Override Emerald Block Color
+option.ORE_HARDCODED_LAPIS_COL=Override Lapis Ore Color
+option.BLOCK_HARDCODED_LAPIS_COL=Override Lapis Block Color
+option.ORE_HARDCODED_REDSTONE_COL=Override Ore Color
+option.BLOCK_HARDCODED_REDSTONE_COL=Override Block Color
+option.WIRE_HARDCODED_REDSTONE_COL=Override Wire Color
+option.TORCH_HARDCODED_REDSTONE_COL=Override Torch Color
+option.HARDCODED_AMETHYST_COL=Override Amethyst Color
+option.HARDCODED_ICE_COL=Override Blue Ice Color
+option.HARDCODED_PUMPKIN_COL=Override Jack o'Lantern Color
+option.HARDCODED_PICKLE_COL=Override Sea Pickle Color
+option.HARDCODED_GLOWSTONE_COL=Override Glowstone Color
+option.HARDCODED_SEALANTERN_COL=Override Sea Lantern Color
+option.HARDCODED_MAGMA_COL=Override Magma Color
+option.HARDCODED_CRYING_COL=Override Crying Obsidian Color
+option.HARDCODED_TORCH_COL=Override Torch Color
+option.LANTERN_HARDCODED_TORCH_COL=Override Lantern Color
+option.HARDCODED_ENDROD_COL=Override End Rod Color
+option.HARDCODED_CHORUS_COL=Override Chorus Flower Color
+option.HARDCODED_FURNACE_COL=Override Furnace Color
+option.HARDCODED_SOULTORCH_COL=Override Soul Torch Color
+option.LANTERN_HARDCODED_SOULTORCH_COL=Override Soul Lantern Color
+option.HARDCODED_LICHEN_COL=Override Glow Lichen Color
+option.HARDCODED_TABLE_COL=Override Enchanting Table Color
+option.HARDCODED_END_COL=Override End Portal Frame Color
+option.PORTAL_HARDCODED_END_COL=Override End Portal Color
+option.CHEST_HARDCODED_END_COL=Override Ender Chest Color
+option.HARDCODED_DRAGON_COL=Override Dragon Egg Color
+option.HARDCODED_CANDLE_COL=Override Candle Color
+option.CAKE_HARDCODED_CANDLE_COL=Override Birthday Cake Color
+option.ANCHOR_HARDCODED_PORTAL_COL=Override Respawn Anchor Color
+option.HARDCODED_PORTAL_COL=Override Nether Portal Color
+option.HARDCODED_BERRY_COL=Override Glow Berry Color
+option.HARDCODED_REDSTONELAMP_COL=Override Redstone Lamp Color
+option.HARDCODED_SHROOMLIGHT_COL=Override Shroomlight Color
+option.HARDCODED_YELLOWFROG_COL=Override Ochre Froglight Color
+option.HARDCODED_GREENFROG_COL=Override Verdant Froglight Color
+option.HARDCODED_PINKFROG_COL=Override Pearlescent Froglight Color
+option.HARDCODED_SCULK_COL=Override Sculk Sensor Color
+option.HARDCODED_SPAWNER_COL=Override Spawner Color
+option.HARDCODED_BREWINGSTAND_COL=Override Brewing Stand Color
+option.HARDCODED_BEACON_COL=Override Beacon Color
+option.HARDCODED_CONDUIT_COL=Override Conduit Color
+option.HARDCODED_ENDCRYSTAL_COL=Override End Crystal Color
+option.HARDCODED_LIGHTNING_COL=Override Ligtning Color
+option.HARDCODED_ITEMFRAME_COL=Override Glow Item Frame Color
+option.HARDCODED_BLAZE_COL=Override Blaze Color
+option.HARDCODED_SQUID_COL=Override Glow Squid Color
+option.HARDCODED_ALLAY_COL=Override Allay Color
+option.HARDCODED_TNT_COL=Override TNT Color
+
+
+option.LAVA_COL_R=Red
+option.LAVA_COL_G=Green
+option.LAVA_COL_B=Blue
+option.FIRE_COL_R=Red
+option.FIRE_COL_G=Green
+option.FIRE_COL_B=Blue
+option.SOULFIRE_COL_R=Red
+option.SOULFIRE_COL_G=Green
+option.SOULFIRE_COL_B=Blue
+option.IRON_COL_R=Red
+option.IRON_COL_G=Green
+option.IRON_COL_B=Blue
+option.COPPER_COL_R=Red
+option.COPPER_COL_G=Green
+option.COPPER_COL_B=Blue
+option.GOLD_COL_R=Red
+option.GOLD_COL_G=Green
+option.GOLD_COL_B=Blue
+option.DIAMOND_COL_R=Red
+option.DIAMOND_COL_G=Green
+option.DIAMOND_COL_B=Blue
+option.EMERALD_COL_R=Red
+option.EMERALD_COL_G=Green
+option.EMERALD_COL_B=Blue
+option.LAPIS_COL_R=Red
+option.LAPIS_COL_G=Green
+option.LAPIS_COL_B=Blue
+option.REDSTONE_COL_R=Red
+option.REDSTONE_COL_G=Green
+option.REDSTONE_COL_B=Blue
+option.AMETHYST_COL_R=Red
+option.AMETHYST_COL_G=Green
+option.AMETHYST_COL_B=Blue
+option.ICE_COL_R=Red
+option.ICE_COL_G=Green
+option.ICE_COL_B=Blue
+option.PUMPKIN_COL_R=Red
+option.PUMPKIN_COL_G=Green
+option.PUMPKIN_COL_B=Blue
+option.PICKLE_COL_R=Red
+option.PICKLE_COL_G=Green
+option.PICKLE_COL_B=Blue
+option.GLOWSTONE_COL_R=Red
+option.GLOWSTONE_COL_G=Green
+option.GLOWSTONE_COL_B=Blue
+option.SEALANTERN_COL_R=Red
+option.SEALANTERN_COL_G=Green
+option.SEALANTERN_COL_B=Blue
+option.MAGMA_COL_R=Red
+option.MAGMA_COL_G=Green
+option.MAGMA_COL_B=Blue
+option.CRYING_COL_R=Red
+option.CRYING_COL_G=Green
+option.CRYING_COL_B=Blue
+option.TORCH_COL_R=Red
+option.TORCH_COL_G=Green
+option.TORCH_COL_B=Blue
+option.ENDROD_COL_R=Red
+option.ENDROD_COL_G=Green
+option.ENDROD_COL_B=Blue
+option.CHORUS_COL_R=Red
+option.CHORUS_COL_G=Green
+option.CHORUS_COL_B=Blue
+option.FURNACE_COL_R=Red
+option.FURNACE_COL_G=Green
+option.FURNACE_COL_B=Blue
+option.SOULTORCH_COL_R=Red
+option.SOULTORCH_COL_G=Green
+option.SOULTORCH_COL_B=Blue
+option.LICHEN_COL_R=Red
+option.LICHEN_COL_G=Green
+option.LICHEN_COL_B=Blue
+option.TABLE_COL_R=Red
+option.TABLE_COL_G=Green
+option.TABLE_COL_B=Blue
+option.END_COL_R=Red
+option.END_COL_G=Green
+option.END_COL_B=Blue
+option.DRAGON_COL_R=Red
+option.DRAGON_COL_G=Green
+option.DRAGON_COL_B=Blue
+option.CANDLE_COL_R=Red
+option.CANDLE_COL_G=Green
+option.CANDLE_COL_B=Blue
+option.PORTAL_COL_R=Red
+option.PORTAL_COL_G=Green
+option.PORTAL_COL_B=Blue
+option.BERRY_COL_R=Red
+option.BERRY_COL_G=Green
+option.BERRY_COL_B=Blue
+option.REDSTONELAMP_COL_R=Red
+option.REDSTONELAMP_COL_G=Green
+option.REDSTONELAMP_COL_B=Blue
+option.SHROOMLIGHT_COL_R=Red
+option.SHROOMLIGHT_COL_G=Green
+option.SHROOMLIGHT_COL_B=Blue
+option.YELLOWFROG_COL_R=Red
+option.YELLOWFROG_COL_G=Green
+option.YELLOWFROG_COL_B=Blue
+option.GREENFROG_COL_R=Red
+option.GREENFROG_COL_G=Green
+option.GREENFROG_COL_B=Blue
+option.PINKFROG_COL_R=Red
+option.PINKFROG_COL_G=Green
+option.PINKFROG_COL_B=Blue
+option.SCULK_COL_R=Red
+option.SCULK_COL_G=Green
+option.SCULK_COL_B=Blue
+option.SPAWNER_COL_R=Red
+option.SPAWNER_COL_G=Green
+option.SPAWNER_COL_B=Blue
+option.BREWINGSTAND_COL_R=Red
+option.BREWINGSTAND_COL_G=Green
+option.BREWINGSTAND_COL_B=Blue
+option.BEACON_COL_R=Red
+option.BEACON_COL_G=Green
+option.BEACON_COL_B=Blue
+option.CONDUIT_COL_R=Red
+option.CONDUIT_COL_G=Green
+option.CONDUIT_COL_B=Blue
+option.ENDCRYSTAL_COL_R=Red
+option.ENDCRYSTAL_COL_G=Green
+option.ENDCRYSTAL_COL_B=Blue
+option.LIGHTNING_COL_R=Red
+option.LIGHTNING_COL_G=Green
+option.LIGHTNING_COL_B=Blue
+option.ITEMFRAME_COL_R=Red
+option.ITEMFRAME_COL_G=Green
+option.ITEMFRAME_COL_B=Blue
+option.BLAZE_COL_R=Red
+option.BLAZE_COL_G=Green
+option.BLAZE_COL_B=Blue
+option.SQUID_COL_R=Red
+option.SQUID_COL_G=Green
+option.SQUID_COL_B=Blue
+option.ALLAY_COL_R=Red
+option.ALLAY_COL_G=Green
+option.ALLAY_COL_B=Blue
+option.TNT_COL_R=Red
+option.TNT_COL_G=Green
+option.TNT_COL_B=Blue
