--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -8,7 +8,7 @@ profile.MEDIUM=§aMedium
 profile.HIGH=§bHigh (Default)
 profile.VERYHIGH=§9Very High
 profile.ULTRA=§dUltra
-profile.comment=Shader profiles change performance settings with the most optimised visual fidelity to performance ratio. §e[*]§r It's recommended to use one of these profiles for your settings unless you know what you are doing. §e[*]§r All affected settings can all be found in the "Performance Settings" menu.
+profile.comment=Shader profiles change performance settings with the most optimised visual fidelity to performance ratio. §e[*]§r It's recommended to use one of these profiles for your settings unless you know what you are doing. §e[*]§r All affected settings can all be found in the "Performance Settings" or the "Rethinking Voxels Settings" menu.
 
 #Information
 screen.INFORMATION=Information
@@ -142,6 +142,8 @@ screen.RAIN_LIGHT_MULTS=Rainy/Snowy Weather
 screen.NETHER_LIGHT_MULTS=The Nether Dimension
 screen.END_LIGHT_MULTS=The End Dimension
 
+screen.BLOCKLIGHT_SETTINGS=Blocklight Color
+screen.BLOCKLIGHT_SETTINGS.comment=Settings to adjust the color emitted from light source blocks.
 screen.BLOCKLIGHT_COLOR_SETTINGS=Blocklight Color
 screen.BLOCKLIGHT_COLOR_SETTINGS.comment=Settings to adjust the color emitted from light source blocks.
 
@@ -168,6 +170,85 @@ screen.SELECT_OUTLINE_SETTINGS.comment=Settings that change the block selection 
 
 screen.WORLD_OUTLINE_SETTINGS=World Outline
 screen.WORLD_OUTLINE_SETTINGS.comment=Settings that are about optional outline effects.
+
+screen.VX_SETTINGS=Rethinking Voxels Settings
+screen.VX_SETTINGS.comment=Settings that are introduced by Rethinking Voxels
+screen.DENOISE_SETTINGS=Denoiser-Related Settings
+
+screen.VBL_SETTINGS=Vol. Blocklight Settings
+screen.VBL_SETTINGS.comment=Settings related to volumetric blocklight. This is the effect that makes fog light up around block light sources.
+
+screen.VX_WORLD=Other Effects
+
+screen.BLOCKCOLS=Block Lights
+screen.BLOCKCOLS.comment=Settings that are related to block lights.
+
+screen.ENTITYCOLS=Entity Lights
+screen.ENTITYCOLS.comment=Settings that are related to entity lights.
+
+screen.ORECOLS=Ore Emissives
+screen.ORECOLS.comment=Settings that are related to ore emissives.
+
+screen.OTHER_COL=Other (Brightness Only)
+screen.OTHER_COL.comment=Settings that don't fit into any other category.
+
+screen.FIRECOLS=Fires & Camp Fires
+screen.FIRECOLS.comment=Settings that are related to fires, and camp fires.
+
+screen.FROGCOLS=Froglights
+screen.FROGCOLS.comment=Settings that are related to froglights.
+
+screen.TORCHCOLS=Torches
+screen.TORCHCOLS.comment=Settings that are related to torches.
+
+screen.ALLAY_COL=Allay
+screen.AMETHYST_COL=Amethyst Cluster
+screen.BEACON_COL=Beacon
+screen.BERRY_COL=Glow Berries
+screen.BLAZE_COL=Blaze
+screen.BREWINGSTAND_COL=Brewing Stand
+screen.CANDLE_COL=Candles
+screen.CHORUS_COL=Chorus Flower
+screen.CONDUIT_COL=Conduit
+screen.COPPER_COL=Copper Ore
+screen.CRYING_COL=Crying Obsidian
+screen.DIAMOND_COL=Diamond Ore
+screen.DRAGON_COL=Dragon Egg
+screen.EMERALD_COL=Emerald Ore
+screen.END_COL=End Related Blocks
+screen.ENDCRYSTAL_COL=End Crystal
+screen.ENDROD_COL=End Rod
+screen.FIRE_COL=Fires & Camp Fires
+screen.FURNACE_COL=Furnace
+screen.GLOWSTONE_COL=Glowstone
+screen.GOLD_COL=Gold Ore
+screen.GREENFROG_COL=Verdant Froglight
+screen.ICE_COL=Blue Ice
+screen.IRON_COL=Iron Ore
+screen.ITEMFRAME_COL=Glow Item Frame
+screen.LAPIS_COL=Lapis Ore
+screen.LAVA_COL=Lava
+screen.LICHEN_COL=Glow Lichen
+screen.LIGHTNING_COL=Lightning Bolt
+screen.MAGMA_COL=Magma Block / Cube
+screen.PICKLE_COL=Sea Pickle
+screen.PINKFROG_COL=Pearlescent Froglight
+screen.PORTAL_COL=Nether Portal
+screen.PUMPKIN_COL=Jack o'Lantern
+screen.REDSTONE_COL=Redstone Ore
+screen.REDSTONELAMP_COL=Redstone Lamp
+screen.SCULK_COL=Sculk Sensor
+screen.SEALANTERN_COL=Sea Lantern
+screen.SHROOMLIGHT_COL=Shroomlight
+screen.SOULFIRE_COL=Soul Fires & Camp Fires
+screen.SOULTORCH_COL=Soul Torch
+screen.SPAWNER_COL=Spawner
+screen.SQUID_COL=Glow Squid
+screen.TABLE_COL=Enchanting Table
+screen.TNT_COL=TNT
+screen.TORCH_COL=Torch
+screen.YELLOWFROG_COL=Ochre Froglight
+
 
 #Settings
 option.RP_MODE=RP Support
@@ -745,6 +826,8 @@ value.GLOWING_LICHEN.0=§cOFF
 value.GLOWING_LICHEN.1=In Closed Areas
 value.GLOWING_LICHEN.2=Always
 
+option.EMISSIVE_EMERALD_BLOCK=Glowing Emerald Block
+
 option.EMISSIVE_REDSTONE_BLOCK=Glowing Redstone Block
 
 option.EMISSIVE_LAPIS_BLOCK=Glowing Lapis Lazuli Block
@@ -798,7 +881,7 @@ value.DIRECTIONAL_BLOCKLIGHT.7=Normal §c[-]
 value.DIRECTIONAL_BLOCKLIGHT.11=Intense §c[-]
 
 option.HELD_LIGHTING_MODE=Dynamic Handheld Lighting
-option.HELD_LIGHTING_MODE.comment=Allows handheld light sources to cast light onto the scene.
+option.HELD_LIGHTING_MODE.comment=Allows handheld light sources to cast light onto the scene. §e[*]§rOnly works with per-pixel light calculations enabled.
 value.HELD_LIGHTING_MODE.0=§cOFF
 value.HELD_LIGHTING_MODE.1=Subtle
 value.HELD_LIGHTING_MODE.2=Normal
@@ -954,3 +1037,348 @@ option.ATM_END_I=Atmosphere Intensity Multiplier
 option.XLIGHT_R=Blocklight Red Multiplier
 option.XLIGHT_G=Blocklight Green Multiplier
 option.XLIGHT_B=Blocklight Blue Multiplier
+
+option.VX_VOL_SIZE=Voxel Volume Size
+value.VX_VOL_SIZE.0=96x64x96 Blocks
+value.VX_VOL_SIZE.1=128x96x128 Blocks
+value.VX_VOL_SIZE.2=256x128x256 Blocks
+value.VX_VOL_SIZE.3=512x128x512 Blocks
+option.VX_VOL_SIZE.comment=This setting changes the size of the part of the world in which advanced Blocklight is calculated.
+
+option.VOXEL_DETAIL_AMOUNT=Voxel Resolution
+value.VOXEL_DETAIL_AMOUNT.1=1/Block
+value.VOXEL_DETAIL_AMOUNT.2=2/Block
+value.VOXEL_DETAIL_AMOUNT.3=4/Block
+value.VOXEL_DETAIL_AMOUNT.4=8/Block
+value.VOXEL_DETAIL_AMOUNT.5=§c[-]§r 16/Block (1GB VRAM needed)
+value.VOXEL_DETAIL_AMOUNT.6=§c[-]§r 32/Block (3GB VRAM needed)
+option.VOXEL_DETAIL_AMOUNT.comment=Adjusts the resolution at which models for blocks are generated. §c[-]§r 16 and more per block need large amounts of VRAM.
+
+option.LIGHT_TRACE_LENGTH=Light Spread Distance
+option.LIGHT_TRACE_LENGTH.comment=Controls the maximum distance at which a light source can still illuminate its surroundings.
+
+option.DENOISE_MAX_BLUR=Maximum Blur Amount
+option.ACCUM_FALLOFF_SPEED=Accumulation Discard Speed
+option.ACCUM_FALLOFF_SPEED.comment=This changes how fast old lighting data is discarded and replaced by new data. High values cause more responsive, but also more flickery lighting, while lower values cause more stable and less noisy lighting, which is also slow to update.
+option.DENOISE_LENIENCE=Denoiser Mode
+value.DENOISE_LENIENCE.0=Sharpest
+value.DENOISE_LENIENCE.1=Sharp
+value.DENOISE_LENIENCE.2=Cleaner
+value.DENOISE_LENIENCE.3=Blurry
+option.DENOISE_LENIENCE.comment=Changes how much the denoiser blurs over details. Sharpest keeps the most noise, but is fairly good at retaining sharp edges. Sharp is a middle ground between Sharpest and Cleaner. Cleaner creates more blurry edges. Blurry barely preserves any sharp edges.
+
+option.DENOISING_DEFINE=Denoising
+value.DENOISING_DEFINE.0=Off
+value.DENOISING_DEFINE.1=Auto
+value.DENOISING_DEFINE.2=On
+
+option.ACCUMULATION=Accumulation
+option.ACCUMULATION.comment=If enabled, block light data will be smoothed across multiple frames. Without this, lighting will look flickery and low-resolution.
+option.TRACE_ALL_LIGHTS=Trace to All Lights
+option.TRACE_ALL_LIGHTS.comment=If enabled, block light calculation will happen for all light sources in every frame, rather than only happening for a randomly selected one. [§c-§r] High performance impact.
+
+option.LIGHT_COLOR_SATURATION=Light Color Saturation
+
+option.LIGHTSOURCE_SIZE_MULT=Light Source Size
+option.LIGHTSOURCE_SIZE_MULT.comment=Lower values increase sharpness of shadows cast by light sources by treating them as smaller than they actually are. §c[-]§rMay cause some light sources to cast weird shadows or stop working altogether at low values.
+
+option.CONWAY=End Game of Life
+option.CONWAY.comment=Simulates Conway's game of life at the bottom of the end. Cells that are close to the player revive.
+value.CONWAY.0=Off
+value.CONWAY.1=Grayscale
+value.CONWAY.2=End-Colors
+
+option.FRACTAL_GALAXY=Fractal Night Sky
+value.FRACTAL_GALAXY.0=Off
+value.FRACTAL_GALAXY.1=Full Mandelbrot Set
+value.FRACTAL_GALAXY.2=Partial Mandelbrot Set
+value.FRACTAL_GALAXY.3=Julia Set
+option.PER_PIXEL_LIGHT=Per-Pixel Light Calculation
+option.PER_PIXEL_LIGHT.comment=If this is enabled, Light from Block Light sources will be calculated separately for each pixel on the screen. Otherwise, it will be calculated only once per block.
+
+
+option.VOLUMETRIC_BLOCKLIGHT=Vol. Blocklight
+option.VBL_STRENGTH=Vol. Blocklight Strength
+option.VBL_NETHER_MULT=Vol. Blocklight Nether Multiplier
+option.VBL_END_MULT=Vol. Blocklight End Multiplier
+
+option.GI_STRENGTH=Global Illumination
+value.GI_STRENGTH.0=Off
+value.GI_STRENGTH.1=Correct
+value.GI_STRENGTH.2=Intense
+
+
+option.CAULDRON_BRIGHTNESS_LAVA=Lava Cauldron Brightness
+option.BRIGHTNESS_LAVA=Lava Brightness
+option.BRIGHTNESS_FIRE=Fire Brightness
+option.CAMPFIRE_BRIGHTNESS_FIRE=Campfire Brightness
+option.BRIGHTNESS_SOULFIRE=Soul Fire Brightness
+option.CAMPFIRE_BRIGHTNESS_SOULFIRE=Soul Campfire Brightness
+option.ORE_BRIGHTNESS_IRON=Iron Ore Brightness
+option.ORE_BRIGHTNESS_COPPER=Copper Ore Brightness
+option.ORE_BRIGHTNESS_GOLD=Gold Ore Brightness
+option.ORE_BRIGHTNESS_DIAMOND=Diamond Ore Brightness
+option.ORE_BRIGHTNESS_EMERALD=Emerald Ore Brightness
+option.BLOCK_BRIGHTNESS_EMERALD=Emerald Block Brightness
+option.ORE_BRIGHTNESS_LAPIS=Lapis Ore Brightness
+option.BLOCK_BRIGHTNESS_LAPIS=Lapis Block Brightness
+option.OREUNLIT_BRIGHTNESS_REDSTONE=Ore Brightness (Unlit)
+option.ORELIT_BRIGHTNESS_REDSTONE=Ore Brightness (Lit)
+option.BLOCK_BRIGHTNESS_REDSTONE=Block Brightness
+option.WIRE0_BRIGHTNESS_REDSTONE=Dust Brightness (Power 1-5)
+option.WIRE1_BRIGHTNESS_REDSTONE=Dust Brightness (Power 6-10)
+option.WIRE2_BRIGHTNESS_REDSTONE=Dust Brightness (Power 11-14)
+option.WIRE3_BRIGHTNESS_REDSTONE=Dust Brightness (Power 15)
+option.TORCH_BRIGHTNESS_REDSTONE=Torch Brightness
+option.BRIGHTNESS_AMETHYST=Amethyst Cluster Brightness
+option.BRIGHTNESS_ICE=Blue Ice Brightness
+option.BRIGHTNESS_PUMPKIN=Jack o'Lantern Brightness
+option.LOW_BRIGHTNESS_PICKLE=Sea Pickle Brightness (1-2 Pickles)
+option.HIGH_BRIGHTNESS_PICKLE=Sea Pickle Brightness (3-4 Pickles)
+option.BRIGHTNESS_GLOWSTONE=Glowstone Brightness
+option.BRIGHTNESS_SEALANTERN=Sea Lantern Brightness
+option.BLOCK_BRIGHTNESS_MAGMA=Magma Block Brightness
+option.CUBE_BRIGHTNESS_MAGMA=Magma Cube Brightness
+option.BRIGHTNESS_CRYING=Crying Obsidian Brightness
+option.BRIGHTNESS_TORCH=Torch Brightness
+option.LANTERN_BRIGHTNESS_TORCH=Lantern Brightness
+option.BRIGHTNESS_ENDROD=End Rod Brightness
+option.BRIGHTNESS_CHORUS=Chorus Flower Brightness
+option.BRIGHTNESS_FURNACE=Furnace Brightness
+option.BRIGHTNESS_SOULTORCH=Soul Torch Brightness
+option.LANTERN_BRIGHTNESS_SOULTORCH=Soul Lantern Brightness
+option.BRIGHTNESS_LICHEN=Glow Lichen Brightness
+option.BRIGHTNESS_TABLE=Enchanting Table Brightness
+option.FRAME_BRIGHTNESS_END=End Portal Frame Brightness (With Eye)
+option.PORTAL_BRIGHTNESS_END=End Portal Brightness
+option.CHEST_BRIGHTNESS_END=Ender Chest Brightness
+option.BRIGHTNESS_DRAGON=Dragon Egg brightness
+option.BRIGHTNESS_CANDLE=Candle Brightness
+option.CAKE_BRIGHTNESS_CANDLE=Birthday Cake Brightness
+option.ANCHOR_BRIGHTNESS_PORTAL=Respawn Anchor Brightness
+option.BRIGHTNESS_PORTAL=Nether Portal Brightness
+option.BRIGHTNESS_BERRY=Glow Berry Brightness
+option.BRIGHTNESS_REDSTONELAMP=Redstone Lamp Brightness
+option.BRIGHTNESS_SHROOMLIGHT=Shroomlight Brightness
+option.BRIGHTNESS_YELLOWFROG=Ochre Froglight Brightness
+option.BRIGHTNESS_GREENFROG=Verdant Froglight Brightness
+option.BRIGHTNESS_PINKFROG=Pearlescent Froglight Brightness
+option.SENSOR_BRIGHTNESS_SCULK=Sculk Sensor Brightness
+option.BRIGHTNESS_SPAWNER=Spawner Brightness
+option.BRIGHTNESS_BREWINGSTAND=Brewing Stand Brighness
+option.BRIGHTNESS_BEACON=Beacon Brightness
+option.BRIGHTNESS_CONDUIT=Conduit Brightness
+option.BRIGHTNESS_ENDCRYSTAL=End Crystal Brightness
+option.BRIGHTNESS_LIGHTNING=Lightning Bolt Brightness
+option.BRIGHTNESS_ITEMFRAME=Glow Itemframe Brightness
+option.BRIGHTNESS_BLAZE=Blaze Brightness
+option.BRIGHTNESS_SQUID=Glow Squid Brightness
+option.BRIGHTNESS_ALLAY=Allay Brightness
+option.BRIGHTNESS_TNT=TNT Brightness
+option.BRIGHTNESS_CRIMSON=Crimson Stem / Hyphae Brightness
+option.BRIGHTNESS_WARPED=Warped Stem / Hyphae Brightness
+
+option.CAULDRON_HARDCODED_LAVA_COL=Override Lava Cauldron Color
+option.HARDCODED_LAVA_COL=Override Lava Color
+option.HARDCODED_FIRE_COL=Override Fire Color
+option.CAMPFIRE_HARDCODED_FIRE_COL=Override Campfire Color
+option.CAMPFIRE_HARDCODED_SOULFIRE_COL=Override Soul Campfire Color
+option.HARDCODED_SOULFIRE_COL=Override Soul Fire Color
+option.ORE_HARDCODED_IRON_COL=Override Iron Ore Color
+option.ORE_HARDCODED_COPPER_COL=Override Copper Ore Color
+option.ORE_HARDCODED_GOLD_COL=Override Gold Ore Color
+option.ORE_HARDCODED_DIAMOND_COL=Override Diamond Ore Color
+option.ORE_HARDCODED_EMERALD_COL=Override Emerald Ore Color
+option.BLOCK_HARDCODED_EMERALD_COL=Override Emerald Block Color
+option.ORE_HARDCODED_LAPIS_COL=Override Lapis Ore Color
+option.BLOCK_HARDCODED_LAPIS_COL=Override Lapis Block Color
+option.ORE_HARDCODED_REDSTONE_COL=Override Ore Color
+option.BLOCK_HARDCODED_REDSTONE_COL=Override Block Color
+option.WIRE_HARDCODED_REDSTONE_COL=Override Wire Color
+option.TORCH_HARDCODED_REDSTONE_COL=Override Torch Color
+option.HARDCODED_AMETHYST_COL=Override Amethyst Color
+option.HARDCODED_ICE_COL=Override Blue Ice Color
+option.HARDCODED_PUMPKIN_COL=Override Jack o'Lantern Color
+option.HARDCODED_PICKLE_COL=Override Sea Pickle Color
+option.HARDCODED_GLOWSTONE_COL=Override Glowstone Color
+option.HARDCODED_SEALANTERN_COL=Override Sea Lantern Color
+option.HARDCODED_MAGMA_COL=Override Magma Color
+option.HARDCODED_CRYING_COL=Override Crying Obsidian Color
+option.HARDCODED_TORCH_COL=Override Torch Color
+option.LANTERN_HARDCODED_TORCH_COL=Override Lantern Color
+option.HARDCODED_ENDROD_COL=Override End Rod Color
+option.HARDCODED_CHORUS_COL=Override Chorus Flower Color
+option.HARDCODED_FURNACE_COL=Override Furnace Color
+option.HARDCODED_SOULTORCH_COL=Override Soul Torch Color
+option.LANTERN_HARDCODED_SOULTORCH_COL=Override Soul Lantern Color
+option.HARDCODED_LICHEN_COL=Override Glow Lichen Color
+option.HARDCODED_TABLE_COL=Override Enchanting Table Color
+option.HARDCODED_END_COL=Override End Portal Frame Color
+option.PORTAL_HARDCODED_END_COL=Override End Portal Color
+option.CHEST_HARDCODED_END_COL=Override Ender Chest Color
+option.HARDCODED_DRAGON_COL=Override Dragon Egg Color
+option.HARDCODED_CANDLE_COL=Override Candle Color
+option.CAKE_HARDCODED_CANDLE_COL=Override Birthday Cake Color
+option.ANCHOR_HARDCODED_PORTAL_COL=Override Respawn Anchor Color
+option.HARDCODED_PORTAL_COL=Override Nether Portal Color
+option.HARDCODED_BERRY_COL=Override Glow Berry Color
+option.HARDCODED_REDSTONELAMP_COL=Override Redstone Lamp Color
+option.HARDCODED_SHROOMLIGHT_COL=Override Shroomlight Color
+option.HARDCODED_YELLOWFROG_COL=Override Ochre Froglight Color
+option.HARDCODED_GREENFROG_COL=Override Verdant Froglight Color
+option.HARDCODED_PINKFROG_COL=Override Pearlescent Froglight Color
+option.HARDCODED_SCULK_COL=Override Sculk Sensor Color
+option.HARDCODED_SPAWNER_COL=Override Spawner Color
+option.HARDCODED_BREWINGSTAND_COL=Override Brewing Stand Color
+option.HARDCODED_BEACON_COL=Override Beacon Color
+option.HARDCODED_CONDUIT_COL=Override Conduit Color
+option.HARDCODED_ENDCRYSTAL_COL=Override End Crystal Color
+option.HARDCODED_LIGHTNING_COL=Override Ligtning Color
+option.HARDCODED_ITEMFRAME_COL=Override Glow Item Frame Color
+option.HARDCODED_BLAZE_COL=Override Blaze Color
+option.HARDCODED_SQUID_COL=Override Glow Squid Color
+option.HARDCODED_ALLAY_COL=Override Allay Color
+option.HARDCODED_TNT_COL=Override TNT Color
+
+
+option.LAVA_COL_R=Red
+option.LAVA_COL_G=Green
+option.LAVA_COL_B=Blue
+option.FIRE_COL_R=Red
+option.FIRE_COL_G=Green
+option.FIRE_COL_B=Blue
+option.SOULFIRE_COL_R=Red
+option.SOULFIRE_COL_G=Green
+option.SOULFIRE_COL_B=Blue
+option.IRON_COL_R=Red
+option.IRON_COL_G=Green
+option.IRON_COL_B=Blue
+option.COPPER_COL_R=Red
+option.COPPER_COL_G=Green
+option.COPPER_COL_B=Blue
+option.GOLD_COL_R=Red
+option.GOLD_COL_G=Green
+option.GOLD_COL_B=Blue
+option.DIAMOND_COL_R=Red
+option.DIAMOND_COL_G=Green
+option.DIAMOND_COL_B=Blue
+option.EMERALD_COL_R=Red
+option.EMERALD_COL_G=Green
+option.EMERALD_COL_B=Blue
+option.LAPIS_COL_R=Red
+option.LAPIS_COL_G=Green
+option.LAPIS_COL_B=Blue
+option.REDSTONE_COL_R=Red
+option.REDSTONE_COL_G=Green
+option.REDSTONE_COL_B=Blue
+option.AMETHYST_COL_R=Red
+option.AMETHYST_COL_G=Green
+option.AMETHYST_COL_B=Blue
+option.ICE_COL_R=Red
+option.ICE_COL_G=Green
+option.ICE_COL_B=Blue
+option.PUMPKIN_COL_R=Red
+option.PUMPKIN_COL_G=Green
+option.PUMPKIN_COL_B=Blue
+option.PICKLE_COL_R=Red
+option.PICKLE_COL_G=Green
+option.PICKLE_COL_B=Blue
+option.GLOWSTONE_COL_R=Red
+option.GLOWSTONE_COL_G=Green
+option.GLOWSTONE_COL_B=Blue
+option.SEALANTERN_COL_R=Red
+option.SEALANTERN_COL_G=Green
+option.SEALANTERN_COL_B=Blue
+option.MAGMA_COL_R=Red
+option.MAGMA_COL_G=Green
+option.MAGMA_COL_B=Blue
+option.CRYING_COL_R=Red
+option.CRYING_COL_G=Green
+option.CRYING_COL_B=Blue
+option.TORCH_COL_R=Red
+option.TORCH_COL_G=Green
+option.TORCH_COL_B=Blue
+option.ENDROD_COL_R=Red
+option.ENDROD_COL_G=Green
+option.ENDROD_COL_B=Blue
+option.CHORUS_COL_R=Red
+option.CHORUS_COL_G=Green
+option.CHORUS_COL_B=Blue
+option.FURNACE_COL_R=Red
+option.FURNACE_COL_G=Green
+option.FURNACE_COL_B=Blue
+option.SOULTORCH_COL_R=Red
+option.SOULTORCH_COL_G=Green
+option.SOULTORCH_COL_B=Blue
+option.LICHEN_COL_R=Red
+option.LICHEN_COL_G=Green
+option.LICHEN_COL_B=Blue
+option.TABLE_COL_R=Red
+option.TABLE_COL_G=Green
+option.TABLE_COL_B=Blue
+option.END_COL_R=Red
+option.END_COL_G=Green
+option.END_COL_B=Blue
+option.DRAGON_COL_R=Red
+option.DRAGON_COL_G=Green
+option.DRAGON_COL_B=Blue
+option.CANDLE_COL_R=Red
+option.CANDLE_COL_G=Green
+option.CANDLE_COL_B=Blue
+option.PORTAL_COL_R=Red
+option.PORTAL_COL_G=Green
+option.PORTAL_COL_B=Blue
+option.BERRY_COL_R=Red
+option.BERRY_COL_G=Green
+option.BERRY_COL_B=Blue
+option.REDSTONELAMP_COL_R=Red
+option.REDSTONELAMP_COL_G=Green
+option.REDSTONELAMP_COL_B=Blue
+option.SHROOMLIGHT_COL_R=Red
+option.SHROOMLIGHT_COL_G=Green
+option.SHROOMLIGHT_COL_B=Blue
+option.YELLOWFROG_COL_R=Red
+option.YELLOWFROG_COL_G=Green
+option.YELLOWFROG_COL_B=Blue
+option.GREENFROG_COL_R=Red
+option.GREENFROG_COL_G=Green
+option.GREENFROG_COL_B=Blue
+option.PINKFROG_COL_R=Red
+option.PINKFROG_COL_G=Green
+option.PINKFROG_COL_B=Blue
+option.SCULK_COL_R=Red
+option.SCULK_COL_G=Green
+option.SCULK_COL_B=Blue
+option.SPAWNER_COL_R=Red
+option.SPAWNER_COL_G=Green
+option.SPAWNER_COL_B=Blue
+option.BREWINGSTAND_COL_R=Red
+option.BREWINGSTAND_COL_G=Green
+option.BREWINGSTAND_COL_B=Blue
+option.BEACON_COL_R=Red
+option.BEACON_COL_G=Green
+option.BEACON_COL_B=Blue
+option.CONDUIT_COL_R=Red
+option.CONDUIT_COL_G=Green
+option.CONDUIT_COL_B=Blue
+option.ENDCRYSTAL_COL_R=Red
+option.ENDCRYSTAL_COL_G=Green
+option.ENDCRYSTAL_COL_B=Blue
+option.LIGHTNING_COL_R=Red
+option.LIGHTNING_COL_G=Green
+option.LIGHTNING_COL_B=Blue
+option.ITEMFRAME_COL_R=Red
+option.ITEMFRAME_COL_G=Green
+option.ITEMFRAME_COL_B=Blue
+option.BLAZE_COL_R=Red
+option.BLAZE_COL_G=Green
+option.BLAZE_COL_B=Blue
+option.SQUID_COL_R=Red
+option.SQUID_COL_G=Green
+option.SQUID_COL_B=Blue
+option.ALLAY_COL_R=Red
+option.ALLAY_COL_G=Green
+option.ALLAY_COL_B=Blue
+option.TNT_COL_R=Red
+option.TNT_COL_G=Green
+option.TNT_COL_B=Blue
