setting for voxel RT reflections

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -1043,7 +1043,7 @@ value.VX_VOL_SIZE.0=96x64x96 Blocks
 value.VX_VOL_SIZE.1=128x96x128 Blocks
 value.VX_VOL_SIZE.2=256x128x256 Blocks
 value.VX_VOL_SIZE.3=512x128x512 Blocks
-option.VX_VOL_SIZE.comment=This setting changes the size of the part of the world in which advanced Blocklight is calculated.
+option.VX_VOL_SIZE.comment=This setting changes the size of the part of the world in which advanced Blocklight is calculated. §c[-]§r Extreme performance impact.
 
 option.VOXEL_DETAIL_AMOUNT=Voxel Resolution
 value.VOXEL_DETAIL_AMOUNT.1=1/Block
@@ -1054,7 +1054,10 @@ value.VOXEL_DETAIL_AMOUNT.5=16/Block
 value.VOXEL_DETAIL_AMOUNT.6=32/Block
 value.VOXEL_DETAIL_AMOUNT.7=64/Block
 value.VOXEL_DETAIL_AMOUNT.8=128/Block
-option.VOXEL_DETAIL_AMOUNT.comment=Adjusts the resolution at which models for blocks are generated. §c[-]§r 16 and more per block need large amounts of VRAM.
+option.VOXEL_DETAIL_AMOUNT.comment=Adjusts the resolution at which models for blocks are generated. §e[*]§r High performance impact.
+
+option.VOXEL_RT_REFLECTIONS=World-Space Reflections
+option.VOXEL_RT_REFLECTIONS.comment=Allows things that aren't visible on the screen to be reflected by other things. §e[*]§r High performance impact.
 
 option.LIGHT_TRACE_LENGTH=Light Spread Distance
 option.LIGHT_TRACE_LENGTH.comment=Controls the maximum distance at which a light source can still illuminate its surroundings.
