--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -1111,6 +1111,12 @@ value.GI_STRENGTH.0=Off
 value.GI_STRENGTH.1=Correct
 value.GI_STRENGTH.2=Intense
 
+option.GI_SAMPLE_COUNT=Global Illumination Quality
+value.GI_SAMPLE_COUNT.0=Low
+value.GI_SAMPLE_COUNT.3=Medium
+value.GI_SAMPLE_COUNT.7=High
+value.GI_SAMPLE_COUNT.13=Ultra
+option.GI_SAMPLE_COUNT.comment=Adjusts the amount of GI samples per voxel and frame. Low: 1 sample. Medium: 3 samples. High: 7 samples. Ultra: 13 samples.
 
 option.CAULDRON_BRIGHTNESS_LAVA=Lava Cauldron Brightness
 option.BRIGHTNESS_LAVA=Lava Brightness
